--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-  <title>React App</title>
+  <title>Classifier</title>
 </head>
 
 <body>
